# git

./: Makefile  blame.c  build_rust.sh  combine-diff.c  diff.c  diffcore-pickaxe.c  grep.c  line-log.c  line-range.c  merge-ll.c  meson.build  range-diff.c  xdiff-interface.c  xdiff-interface.h
.github/workflows/: main.yml
builtin/: merge-file.c  merge-tree.c  rerere.c
ci/: install-dependencies.sh  install-rust.sh  lib.sh  make-test-artifacts.sh  run-build-and-tests.sh
native/: debug.ini
rust/header/: types.h
rust/interop/: Cargo.toml
rust/interop/src/: ivec.rs  lib.rs
rust/xdiff/: Cargo.toml  build.rs
rust/xdiff/src/: gitmap.rs  lib.rs  maps.rs  mphb.rs  xdfenv.rs  xdiff.rs  xdiffi.rs  xemit.rs  xhistogram.rs  xmerge.rs  xpatience.rs  xprepare.rs  xrecord.rs  xtypes.rs  xutils.rs
rust/xdiff/tests/: mock.rs  test.rs  test_xhistogram.rs
rust/xdiff/tests/data/: duplicates.txt  file1.txt  file2.txt
rust/xdiff/tests/data/xhistogram/: gitdump.txt  plato-0  plato-1  plato-2  salutations-after  salutations-before  salutations-expect
xdiff/: ivec.c  ivec.h  xdiff.h  xdiffi.c  xdiffi.h  xemit.c  xemit.h  xhistogram.c  xinclude.h  xmacros.h  xmerge.c  xpatience.c  xprepare.c  xprepare.h  xtrace2.c  xtrace2.h  xtypes.h  xutils.c  xutils.h
