[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

[lib]
name = "xdiff"
path = "src/lib.rs"
## staticlib to generate xdiff.a for use by gcc
## cdylib (optional) to generate xdiff.so for use by gcc
## rlib is required by the rust unit tests
crate-type = ["staticlib", "rlib"]

[dependencies]
interop = { path = "../interop" }
libc = "0.2.169"
sha2 = "0.10.8"
typed-arena = "2.0.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
#xxhash = "0.0.8"
#twox-hash = "2.1.0"
#xxh3 = "0.1.1"

[features]
default = []
c_alt = ["interop/c_alt"]
